--- a/css/style.css
+++ b/css/style.css
@@ -30,15 +30,24 @@
   text-align: center;
 }
 
-hr {
-  /* margin-top: 1rem;
+.uline {
+  margin-top: 1rem;
   margin-bottom: 1rem;
   border: 0;
-  border-top: 12px solid black; */
-  border-color: black;
-  border-width: thick;
+  border-top: 3px solid #1e4d92;
+}
 
-  box-sizing: content-box;
-  height: 0;
-  overflow: visible;
+.register {
+  background-origin: padding-box;
+  box-sizing: border-box;
+  width: 500%;
+  height: initial;
+  /* border: darkgrey solid; */
+  margin-top: 50px;
+  /* background: linear-gradient(57deg, #1e4d92, #00c6a7); */
+  /* clip-path: polygon(0% 0%, 100% 0%, 100% 98%, 0% 100%); */
+}
+.bg1 {
+  background: linear-gradient(57deg, #00c6a7, #1e4d92);
+  /* clip-path: polygon(0% 0%, 100% 0%, 100% 98%, 0% 100%); */
 }
